--- a/scraper/map.ipynb
+++ b/scraper/map.ipynb
@@ -578,27 +578,24 @@
       "metadata": {
         "id": "7DqJYqWS-rPn"
       },
-      "execution_count": 34,
+      "execution_count": 69,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "Map = json.dumps(mapInfo,ensure_ascii=False, indent = 5)\n",
-        "y = Map.encode('utf-8')\n",
-        "with open('Map.json', 'w') as f:\n",
-        "  f.write(str(y))\n"
+        "Map = json.dumps(mapInfo, skipkeys = True, allow_nan = True, indent = 5)"
       ],
       "metadata": {
         "id": "jUM6Rn0P-ziq"
       },
-      "execution_count": 44,
+      "execution_count": 85,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "files.download('Map.json')"
+        "files.download('map.json')"
       ],
       "metadata": {
         "colab": {
@@ -606,9 +603,9 @@
           "height": 17
         },
         "id": "zYY-SrdBDjYW",
-        "outputId": "8b35c083-15dd-4a79-ad28-59ba0036e576"
+        "outputId": "26ece0fa-5f3c-4e75-a45a-8fe011d62cc5"
       },
-      "execution_count": 46,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "display_data",
@@ -669,7 +666,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_f3b51779-0a36-4393-84b2-27bd53b0b77c\", \"Map.json\", 1831)"
+              "download(\"download_3079ff9e-0907-4150-8316-d36303b22a61\", \"map.json\", 1862)"
             ]
           },
           "metadata": {}
@@ -686,9 +683,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lw95zMQb_C7k",
-        "outputId": "6c5ab30a-25f3-4ad9-9868-118495c6fe8d"
+        "outputId": "14f03027-1f1b-4f57-87f1-47ea33d60cf0"
       },
-      "execution_count": 45,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
